--- a/config.json
+++ b/config.json
@@ -17,9 +17,9 @@
     "antenna_inclination_angle": 25,
     "remote_machine_IP": "127.0.0.1",
     "remote_machine_username": "root",
-    "remote_machine_password": "1616116",
+    "remote_machine_password": "root123",
     "Satellite link": "grid",
-    "IP version": "Dual",
+    "IP version": "IPv4",
     "Intra-AS routing": "OSPF",
     "Inter-AS routing": "BGP",
     "Link policy": "LeastDelay",
